--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "title": "Business Casual",
+    "title": "SOUNDSGOOD",
     "name": "startbootstrap-business-casual",
     "version": "5.0.10",
     "scripts": {
